--- a/08_Events/keybord-project/index.html
+++ b/08_Events/keybord-project/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Event KeyCodes</title>
-    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <style>
       table,
       th,
       td {
         border: 1px solid #e7e7e7;
+      }
+      th{
+        padding: 10px ;
+      }
+      tb{
+        padding: 15px ;
       }
       .project {
         background-color: #1c1c1c;
